// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset -5 1`] = `
<OffsetBasedPagination
  offset={-5}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={false}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={1}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={1}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton2"
                  isLoading={false}
                  key="menubutton2"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton2"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 1,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageBack
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-back "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-back "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                          transform="rotate(180 4 7)"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageBack>
                </span>
              </button>
            </Button>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset 0 1`] = `
<OffsetBasedPagination
  offset={0}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={false}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={1}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={1}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton7"
                  isLoading={false}
                  key="menubutton7"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton7"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 1,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageBack
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-back "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-back "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                          transform="rotate(180 4 7)"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageBack>
                </span>
              </button>
            </Button>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset 10 1`] = `
<OffsetBasedPagination
  offset={10}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={false}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={1}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={1}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton12"
                  isLoading={false}
                  key="menubutton12"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton12"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 1,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageBack
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-back "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-back "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                          transform="rotate(180 4 7)"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageBack>
                </span>
              </button>
            </Button>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset 20 1`] = `
<OffsetBasedPagination
  offset={20}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={true}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={2}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={2}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton17"
                  isLoading={false}
                  key="menubutton17"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton17"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 2,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Previous Page"
                  id="be.pagination.previousPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageBack
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-back "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-back "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                                transform="rotate(180 4 7)"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageBack>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset 75 1`] = `
<OffsetBasedPagination
  offset={75}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={true}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={4}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={4}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton23"
                  isLoading={false}
                  key="menubutton23"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton23"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 4,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Previous Page"
                  id="be.pagination.previousPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageBack
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-back "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-back "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                                transform="rotate(180 4 7)"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageBack>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;

exports[`elements/Pagination/OffsetBasedPagination should render properly with offset 100 1`] = `
<OffsetBasedPagination
  offset={100}
  onOffsetChange={[MockFunction]}
  pageSize={20}
  totalCount={100}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={false}
    hasPreviousPage={true}
    isOffsetBasedPagination={true}
    onPageClick={[Function]}
    pageCount={5}
    pageNumber={5}
  >
    <div
      className="bdl-Pagination"
    >
      <div
        className="bdl-Pagination-count"
      >
        <PaginationMenu
          onPageClick={[Function]}
          pageCount={5}
          pageNumber={5}
        >
          <DropdownMenu
            className="bdl-Pagination-dropdown"
            constrainToScrollParent={false}
            constrainToWindow={true}
            isResponsive={false}
            isRightAligned={true}
          >
            <d
              attachment="top right"
              className="bdl-Pagination-dropdown"
              classPrefix="dropdown-menu"
              constraints={
                [
                  {
                    "attachment": "together",
                    "to": "window",
                  },
                ]
              }
              enabled={false}
              renderElement={[Function]}
              renderElementTo={<body />}
              renderTarget={[Function]}
              targetAttachment="bottom right"
            >
              <div
                className="bdl-DropdownMenu-target"
              >
                <Button
                  aria-expanded="false"
                  aria-haspopup="true"
                  className="bdl-Pagination-toggle"
                  id="menubutton29"
                  isLoading={false}
                  key="menubutton29"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  showRadar={false}
                  type="submit"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    className="btn bdl-Pagination-toggle"
                    id="menubutton29"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="submit"
                  >
                    <span
                      className="btn-content"
                    >
                      <FormattedMessage
                        defaultMessage="{pageNumber} of {pageCount}"
                        id="be.pagination.pageStatus"
                        values={
                          {
                            "pageCount": 5,
                            "pageNumber": 5,
                          }
                        }
                      >
                        <div />
                      </FormattedMessage>
                    </span>
                  </button>
                </Button>
              </div>
            </d>
          </DropdownMenu>
        </PaginationMenu>
      </div>
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Previous Page"
                  id="be.pagination.previousPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageBack
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-back "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-back "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                                transform="rotate(180 4 7)"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageBack>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageForward
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-forward "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-forward "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageForward>
                </span>
              </button>
            </Button>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</OffsetBasedPagination>
`;
